--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
       <img src="images/Me/kk.jpg" alt="Kenneth Vang Self" />
         <h1>Kenneth Vang</h1>
+      <hr>
         <p>Blaine, MN</p>
     </header>
 
@@ -22,13 +23,16 @@
 
         <section id="about">
             <h2>About Me</h2>
-            <p>I am a future developer with a strong focus on becoming a full stack developer. Outside of web developing, I love to play sports such as volleyball and basketball. </p>
+            <p>I am a future developer with a strong focus on becoming a full stack developer. Outside of web developing, I love to play sports or anything outside. Here is a list of the activities I love to do. </p>
+          <ol>
+            Volleyball, Basketball, Fishing
+          </ol>
         </section>
     </main>
 
     <footer>
         <section id="contact">
-            <h2>Contact</h2>
+            <h3>Contact</h3>
             <ul>
                 <li><a href="https://www.linkedin.com/in/kenneth-t-vang/" target="_blank">LinkedIn</a></li>
                 <li><a href="https://github.com/ktvang" target="_blank">GitHub</a></li>
